[gd_scene load_steps=5 format=2]

[ext_resource path="res://Picture/UI/HeadPortrait/HeadPortraitFrame.png" type="Texture" id=1]
[ext_resource path="res://Script/UI/CommonUI/CommonHeadPortrait.gd" type="Script" id=2]
[ext_resource path="res://Picture/UI/HeadPortrait/HeadPortraitBG.png" type="Texture" id=3]
[ext_resource path="res://Picture/UI/Icon/Skill/SkillHover.png" type="Texture" id=4]

[node name="CommonHeadPortrait" type="Control"]
margin_right = 60.0
margin_bottom = 80.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRectBG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRectHeadPortrait" type="TextureRect" parent="."]
margin_right = 60.0
margin_bottom = 80.0
__meta__ = {
"_edit_lock_": true
}

[node name="textureRectFrame" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRectHover" type="TextureRect" parent="."]
visible = false
margin_right = 60.0
margin_bottom = 80.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="mouse_entered" from="." to="." method="_on_CommonHeadPortrait_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CommonHeadPortrait_mouse_exited"]
